moov, gui, ItemPlacement, take/use/open, LockedExit & exit